fix: dark mode toggle position

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -8,7 +8,3 @@
     flex-direction: column;
     justify-content: center;
 }
-
-.Header-darkModeToggle {
-    justify-self: flex-end;
-}
